--- a/public/design-old/interior.html
+++ b/public/design-old/interior.html
@@ -8,7 +8,7 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link href="/omni-cms/app.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 	<script defer src='/omni-cms/components.js'></script>
 </head>
