--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link href="/omni-cms/app.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
+
 
 	<script src='/omni-cms/components.js'></script>
 
