--- a/public/test.html
+++ b/public/test.html
@@ -8,21 +8,24 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link href="/omni-cms/app.css" rel="stylesheet">
-	<link href="/fontawesome/css/all.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 	<script defer src='/omni-cms/components.js'></script>
 </head>
 
 <body class="h-screen bg-white w-full flex flex-col items-center">
 
 <mc-design-sidepanel></mc-design-sidepanel>
+<p class="h-96">
+    test
+    <i class="fas fa-camera"></i>
+</p>
 <p>This is a gallery test 
     <span class="material-icons">face</span>
     <span class="material-icons-outlined">account_circle</span>
     <span class="material-icons">account_circle</span>
 </p>
     <div class="bg-blue-300 w-full h-96 flex" style="height:50rem">
+    
         <mc-gallery-section class="flex w-full h-full">
             <mc-slides class="flex flex-col w-full h-full">
                         <mc-slide>
