added /helper/styles.js to manage css includes

--- a/public/design6/index.html
+++ b/public/design6/index.html
@@ -19,6 +19,7 @@
 <body class="h-full bg-white w-full flex flex-col">
 
     <mc-design-sidepanel></mc-design-sidepanel>
+    <mc-scrolltop></mc-scrolltop>
     
     <div class="bg-primary w-full h-12 px-10 flex px-20">
         <div>
