--- a/public/design-old/index.html
+++ b/public/design-old/index.html
@@ -7,7 +7,7 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link href="/omni-cms/app.css" rel="stylesheet">
+	<link href="/omni-cms/main.css" rel="stylesheet">
 	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 	<script defer src='/omni-cms/components.js'></script>
@@ -29,15 +29,15 @@
 		</div>
 		<div class="md:w-2/3 flex flex-col items-center md:items-end md:p-3 text-xl md:text-lg">
 				<div class="flex flex-row items-end">
-					<ul class="bars flex">
+					<ul class="bars list-none flex">
 						<li class="p-2">
-							<a class="text-secondary px-5 py-2" href="#">Calendar</a>
+							<a class="text-secondary px-2 py-2" href="#">Calendar</a>
 						</li>
 						<li class="p-2">
-							<a class="text-secondary px-5 py-2" href="#">Directory</a>
+							<a class="text-secondary px-2 py-2" href="#">Directory</a>
 						</li>
 						<li class="p-2">
-							<a class="bg-secondary text-white px-5 py-2" href="#">Login</a>
+							<a class="bg-secondary text-white px-4 py-2" href="#">Login</a>
 						</li>
 					</ul>
 				</div>
@@ -73,7 +73,7 @@
 		<div class="md:w-1/3 flex flex-col">
 			<div class="bg-gray-100 p-10 shadow-xl m-2 border-primary">
 				<div class="text-2xl">Quick Links</div>
-				<ul class="list-disc text-xl">
+				<ul class="list-disc text-xl p-0">
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Catalog</a></li>
 					<li><a href="#">Faculty Directory</a></li>
@@ -101,20 +101,20 @@
 				<div class="md:w-3/5">
 					<div class="text-4xl mb-5">Gallena University</div>
 					<div class="flex flex-row pl-10">
-						<ul class="flex flex-col w-1/2 list-disc">
-							<li><a href="#">About</a></li>
-							<li><a href="#">Academics</a></li>
-							<li><a href="#">Admissions</a></li>
-							<li><a href="#">Athletics</a></li>
-							<li><a href="#">Campus Life</a></li>
-							<li><a href="#">News</a></li>
+						<ul class="flex flex-col w-1/2 list-none text-lg">
+							<li><a class="text-white" href="#">About</a></li>
+							<li><a class="text-white" href="#">Academics</a></li>
+							<li><a class="text-white" href="#">Admissions</a></li>
+							<li><a class="text-white" href="#">Athletics</a></li>
+							<li><a class="text-white" href="#">Campus Life</a></li>
+							<li><a class="text-white" href="#">News</a></li>
 						</ul>
-						<ul class="flex flex-col w-1/2 list-disc">
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Catalog</a></li>
-							<li><a href="#">Faculty Directory</a></li>
-							<li><a href="#">Mobile</a></li>
-							<li><a href="#">Social Media Mashup</a></li>
+						<ul class="flex flex-col w-1/2 list-none text-lg">
+							<li><a class="text-white" href="#">Blog</a></li>
+							<li><a class="text-white" href="#">Catalog</a></li>
+							<li><a class="text-white" href="#">Faculty Directory</a></li>
+							<li><a class="text-white" href="#">Mobile</a></li>
+							<li><a class="text-white" href="#">Social Media Mashup</a></li>
 						</ul>
 					</div>
 				</div>
@@ -139,7 +139,7 @@
 					<div class="p-2"><a href="#">Last Updated 8/27/2021</a></div>
 				</div>
 				<div class="md:w-1/5">
-					<ul class="flex justify-center w-full">
+					<ul class="flex justify-center w-full list-none space-x-2">
 						<li>
 							<a href="#">
 								<span class="fa fa-rss"></span>
