--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link href="/omni-cms/app.css" rel="stylesheet">
+	<link href="/omni-cms/main.css" rel="stylesheet">
 	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 
